--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black; font-family:Arial, Helvetica, sans-serif ;
+     color: white;}
 
+ h1{color:grey;}
+
+ div.maindiv{ background-color: white; color: black; width: 420px;  padding: 20px ; margin: auto; border-radius: 15px; }
 
